Add profile and channel info to accessible window title.

Screen reader users rely on the accessible window title to quickly
switch between multiple open windows. To aid power users who use
multiple profiles and Chrome channels, include the avatar name and the
Chrome channel to the accessible window title. The most common case of
a single profile and stable channel is unchanged.

Bug: 783479, 784676
Change-Id: Ia0c985f4408d63aded03289450a8dcc9e9b57f0e
Reviewed-on: https://chromium-review.googlesource.com/903483
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535402}
Former-commit-id: f32dc4307342ffdc767d9f8f245058c45ec6ff3d